tests/e2e/invalid_return_type5.story
function foo returns List[in]
    return ""
